--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
   ],
   "require": {
     "php": ">= 5.6.0",
-    "yiisoft/yii2": "^2.0"
+    "yiisoft/yii2": "~2.0.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.7"
