--- a/composer.json
+++ b/composer.json
@@ -13,15 +13,26 @@
     }
   ],
   "require": {
-    "php": ">= 5.6.0",
-    "yiisoft/yii2": "~2.0.0"
+    "php": ">=7.1.0",
+    "yiisoft/yii2": "~2.0.14"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.7"
+    "phpunit/phpunit": "^7.3"
+  },
+  "provide": {
+    "bower-asset/jquery": "*",
+    "bower-asset/inputmask": "*",
+    "bower-asset/punycode": "*",
+    "bower-asset/yii2-pjax": "*"
   },
   "autoload": {
     "psr-4": {
       "jamband\\behaviors\\": "src"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "tests\\": "tests"
     }
   }
 }
