--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <phpunit bootstrap="tests/bootstrap.php">
     <testsuites>
-        <testsuite>
+        <testsuite name="yii2-ensure-unique-behavior Test Suite">
             <directory suffix=".php">tests</directory>
         </testsuite>
     </testsuites>
