--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,10 @@
   ],
   "require": {
     "php": ">=7.1.0",
-    "yiisoft/yii2": "~2.0.14"
+    "yiisoft/yii2": "^2.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^7.3"
+    "phpunit/phpunit": "^8.5"
   },
   "provide": {
     "bower-asset/jquery": "*",
