--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
+dist: bionic
+
 language: php
 
 php:
-  - 7.1
   - 7.2
+  - 7.3
+  - 7.4
 
 cache:
   directories:
@@ -16,4 +19,4 @@ install:
   - travis_retry composer install --prefer-dist --no-interaction --no-suggest
 
 script:
-  - vendor/bin/phpunit --verbose
+  - vendor/bin/phpunit
